<?xml version="1.0"?>
<package>
  <name>scitos_description</name>
  <version>0.0.4</version>
  <description>
    The scitos_description package contains the description
    (mechanical, kinematic, visual, etc.) of the SCITOS robot.
  </description>

  <maintainer email="l.kunze@cs.bham.ac.uk">Lars Kunze</maintainer>

  <license>BSD</license>

  <url type="website">http://github.com/strands-project/scitos_common</url>

  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author>
  <author email="nilsbore@gmail.com">Nils Bore</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>calibrate_chest</run_depend>

</package>
